testdata/baselines/reference/submodule/conformance/for-of52.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
for-of52.ts(1,11): error TS2451: Cannot redeclare block-scoped variable 'v'.
for-of52.ts(1,11): error TS2451: Cannot redeclare block-scoped variable 'v'.
for-of52.ts(1,14): error TS2451: Cannot redeclare block-scoped variable 'v'.
for-of52.ts(1,14): error TS2451: Cannot redeclare block-scoped variable 'v'.
for-of52.ts(1,20): error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== for-of52.ts (5 errors) ====
    for (let [v, v] of [[]]) {}
              ~
!!! error TS2451: Cannot redeclare block-scoped variable 'v'.
              ~
!!! error TS2451: Cannot redeclare block-scoped variable 'v'.
                 ~
!!! error TS2451: Cannot redeclare block-scoped variable 'v'.
                 ~
!!! error TS2451: Cannot redeclare block-scoped variable 'v'.
                       ~~~~
!!! error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.